# portal-universidade-api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: django.yml
setup/: settings.py  urls.py
src/courses/: admin.py  apps.py  models.py  urls.py  views.py
src/courses/migrations/: 0001_initial.py  0002_remove_course_students.py  0003_alter_course_name.py  0004_alter_course_professor.py
src/courses/repository/: course_repository.py
src/courses/tests/: test_courses_api.py  test_courses_serializers.py  test_courses_services.py
src/enrollments/: admin.py  apps.py  models.py  urls.py  views.py
src/enrollments/migrations/: 0001_initial.py  0002_alter_enrollment_course_alter_enrollment_student.py
src/enrollments/repository/: enrollment_repository.py
src/enrollments/service/: commands.py  serializers.py  services.py
src/enrollments/tests/: test_enrollments_api.py  test_enrollments_serializers.py  test_enrollments_services.py
src/grades/: admin.py  apps.py  models.py  urls.py  views.py
src/grades/migrations/: 0001_initial.py  0002_alter_grade_course_alter_grade_professor_and_more.py  0003_alter_grade_course_alter_grade_professor_and_more.py
src/grades/repository/: grade_repository.py
src/grades/tests/: test_grades_api.py  test_grades_serializers.py  test_grades_services.py
src/libs/: command.py  repository.py  strategies.py  views.py
src/users/: admin.py  apps.py  models.py  urls.py  views.py
src/users/domain/: entities.py
src/users/migrations/: 0001_initial.py
src/users/repository/: coordinator_repository.py  professor_repository.py  (+1 more)
(+25 files in other folders)
